# UrbanEvacuationSimulator

./: .gitignore  README.md  codebase.txt  map.json
UrbanEvacuationSimulator/: UrbanEvacuationSimulator.sln
UrbanEvacuationSimulator/UrbanEvacuationSimulator/: Program.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Common/: UrbanEvacuationSimulator.Common.csproj
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Core/Agent/: Agent.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Core/AgentStructure/: Agent.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Core/Constants/: AgentConstants.cs  GraphConstants.cs  SimulationConstants.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Core/DTOs/: OsmEdgeDto.cs  OsmElementDto.cs  OsmNodeDto.cs  OverpassResponseDto.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Core/Engines/: SimulationEngine.cs
UrbanEvacuationSimulator/UrbanEvacuationSimulator.GraphStructure/: Graph.cs  UrbanEvacuationSimulator.GraphStructure.csproj
UrbanEvacuationSimulator/UrbanEvacuationSimulator.Runner/: Program.cs  UrbanEvacuationSimulator.Runner.csproj
python_microservices/: map_loader.py  pyproject.toml  vizualizator.py
python_services/: pyproject.toml
python_services/map_loading_service/: loader.py
python_services/metric_analyzer_service/: analyzer.py
python_services/visualization_service/: visualizator.py
python_services/vizualization_service/: vizualizator.py
simulation_results/: edges_report.txt  rf_training_report.txt  simulation_metrics.csv
(+20 files in other folders)
